# GLIBC

example/: Makefile.am  build2host.sh  build2malloc.sh  configure.ac  glib_malloc.c  glibc_malloc_tcache.c  glibc_test_malloc.c  malloc.c
glibc-2.29/malloc/: arena.c  malloc.c  malloc.h
jemalloc-5.2.1/: build2host.sh
jemalloc-5.2.1/example/: jemalloc_memory.c
jemalloc-5.2.1/include/jemalloc/internal/: arena_inlines_b.h  jelog.h  jemalloc_internal_inlines_b.h  log.h  tsd.h
jemalloc-5.2.1/src/: arena.c  background_thread.c  base.c  ctl.c  extent.c  extent_dss.c  jemalloc.c  pages.c  prof.c  rtree.c  sz.c  tcache.c  tsd.c
linux-patch/: CMakeLists.txt  build2host.sh
linux-patch/binutils-2.34/: Makefile.in
linux-patch/example/: extdynlib.c  linkdylib.c  recipient.c
linux-patch/include/: binelf.h  config.h.in  header.h  logger.h  patch.h  sysmem.h
linux-patch/patch/: logger.c  logger.h  patch.cpp  patch.h
linux-patch/ptraceInject/: ptraceInject.c
linux-patch/src/: binelf.cpp  logger.c  main.cpp  patch.cpp  sysmem.cpp
